requirements and README

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--i https://pypi.doubanio.com/simple
+-i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
 python-gitlab
 Flask
 Flask_OAuthlib
@@ -16,3 +16,4 @@ grpcio
 raven
 PyYAML
 webargs
+more_itertools
