--- a/tools/citadel.service
+++ b/tools/citadel.service
@@ -12,6 +12,7 @@ LimitNOFILE=10485760
 LimitNPROC=10485760
 LimitCORE=infinity
 MountFlags=slave
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
