--- a/tools/eru-core.service
+++ b/tools/eru-core.service
@@ -10,6 +10,7 @@ LimitNOFILE=10485760
 LimitNPROC=10485760
 LimitCORE=infinity
 MountFlags=slave
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
