--- a/tools/watch-etcd.service
+++ b/tools/watch-etcd.service
@@ -12,6 +12,7 @@ LimitNOFILE=10485760
 LimitNPROC=10485760
 LimitCORE=infinity
 MountFlags=slave
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
