--- a/tools/watch-etcd.service
+++ b/tools/watch-etcd.service
@@ -7,7 +7,7 @@ After=network.target
 Type=simple
 Environment="OAUTHLIB_INSECURE_TRANSPORT=1" "GRPC_VERBOSITY=INFO"
 WorkingDirectory=/opt/citadel
-ExecStart=/opt/citadel/bin/run-etcd-watcher
+ExecStart=/opt/citadel/bin/run-etcd-watcher c1
 LimitNOFILE=10485760
 LimitNPROC=10485760
 LimitCORE=infinity
