--- a/tools/citadel.service
+++ b/tools/citadel.service
@@ -7,7 +7,7 @@ After=network.target
 Type=simple
 Environment="OAUTHLIB_INSECURE_TRANSPORT=1" "GRPC_VERBOSITY=INFO"
 WorkingDirectory=/opt/citadel
-ExecStart=/usr/bin/gunicorn app:app --bind 0.0.0.0:5000 -w 4 --timeout 1200
+ExecStart=/usr/bin/gunicorn citadel.app:app --bind 0.0.0.0:5000 -w 4 --timeout 1200
 LimitNOFILE=10485760
 LimitNPROC=10485760
 LimitCORE=infinity
