--- a/tools/citadel.service
+++ b/tools/citadel.service
@@ -7,7 +7,7 @@ After=network.target
 Type=simple
 Environment="OAUTHLIB_INSECURE_TRANSPORT=1" "GRPC_VERBOSITY=INFO"
 WorkingDirectory=/opt/citadel
-ExecStart=/usr/bin/gunicorn citadel.app:app -c gunicorn_config.py
+ExecStart=/root/.pyenv/versions/3.6.1/envs/citadel/bin/gunicorn citadel.app:app -c gunicorn_config.py
 LimitNOFILE=10485760
 LimitNPROC=10485760
 LimitCORE=infinity
