[skip ci] use erulb3 master branch

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,4 @@ pyparsing
 crontab
 marshmallow
 -e git+http://gitlab.ricebook.net/platform/mapi.git#egg=mapi
--e git+http://gitlab.ricebook.net/platform/erulb3.git@feature/python3#egg=erulb-py
+-e git+http://gitlab.ricebook.net/platform/erulb3.git#egg=erulb-py
