abandon specs.combo, store in citadel database

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ blinker
 wrapt
 pyparsing
 crontab
+webargs
 marshmallow
 -e git+http://gitlab.ricebook.net/platform/mapi.git#egg=mapi
 -e git+http://gitlab.ricebook.net/platform/erulb3.git#egg=erulb-py
