--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+-r requirements.txt
 mock
 pytest
 pytest-flask
@@ -6,3 +7,6 @@ ipython
 pdbpp
 # for commandline testing
 websocket-client
+sphinx
+sphinxcontrib-httpdomain
+sphinxcontrib-httpexample
